change the infrastructure of the app

--- a/CafeForGames/appsettings.json
+++ b/CafeForGames/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultSqlConnection": "Data Source=DESKTOP-TMGECJG\\SQLEXPRESS;Initial Catalog=DbGames;Integrated Security=True"
+  },
   "AllowedHosts": "*"
 }
