--- a/CafeForGames/appsettings.json
+++ b/CafeForGames/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultSqlConnection": "Data Source=your sql server host name;Initial Catalog=DbGames;Integrated Security=True"
+    "DefaultSqlConnection": "Data Source=DESKTOP-TMGECJG\\SQLEXPRESS;Initial Catalog=DbGames;Integrated Security=True"
   },
   "AllowedHosts": "*"
-}
+} 
