the complete api with simple security

--- a/CafeForGames/appsettings.json
+++ b/CafeForGames/appsettings.json
@@ -8,5 +8,8 @@
   "ConnectionStrings": {
     "DefaultSqlConnection": "Data Source=DESKTOP-TMGECJG\\SQLEXPRESS;Initial Catalog=DbGames;Integrated Security=True"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ApiSettings": {
+    "Secret": "Here Is The Secret Key."
+  }
 } 
